--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: http://www.biryaniqissa.com/website
-baseurl: /website
+url: http://www.biryaniqissa.com/
+baseurl: /
 
 # Site settings
 title: Biryani Qissa
